--- a/transaction.html
+++ b/transaction.html
@@ -8,7 +8,7 @@
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a><a class="logout" href="#">Log out</a>
     <div class="alert yellow">
-      <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
+      <div class="white-box"><span>!</span></div>
       <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
       <div class="text-box"><span id="strong">Важно <br/></span>
         <p>о том, что нужно юзать одинаковую почту</p>
@@ -57,7 +57,7 @@
             <div class="arrow"> </div>
           </div>
           <div class="form-element"><span>Номер куда переводится</span>
-            <input type="text" placeholder="880055535"/>
+            <input type="text" value="88005553535" readonly="readonly"/>
           </div>
           <div class="form-element">
             <input type="submit" value="Перевести" id="subm"/>
