--- a/transaction.html
+++ b/transaction.html
@@ -7,14 +7,16 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a><a class="logout" href="#">Log out</a>
-    <div class="alert yellow">
-      <div class="white-box"><span>!</span></div>
-      <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
-      <div class="text-box"><span id="strong">Важно <br/></span>
-        <p>о том, что нужно юзать одинаковую почту</p>
-      </div>
-    </div>
     <div class="wrapper">
+      <div class="alert yellow">
+        <div class="msg">
+          <div class="white-box"><span>!</span></div>
+          <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
+          <div class="text-box"><span id="strong">Важно <br/></span>
+            <p>о том, что нужно юзать одинаковую почту</p>
+          </div>
+        </div>
+      </div>
       <div class="content"><span>Текущий сбор:</span>
         <div class="number-box"><img src="static\img\png\rect.png" alt=""/><span id="number">$ 1,234,566</span></div>
         <div class="progress-bar-box">
