--- a/confirmed.html
+++ b/confirmed.html
@@ -8,8 +8,10 @@
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
     <div class="alert green">
-      <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
-      <p>Ваш аккаунт подтвержден</p>
+      <div class="msg">
+        <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
+        <p>Ваш аккаунт подтвержден</p>
+      </div>
     </div>
     <div class="wrapper">
       <form action="#">
