--- a/transaction.html
+++ b/transaction.html
@@ -11,7 +11,7 @@
       <div class="alert yellow">
         <div class="msg">
           <div class="white-box"><span>!</span></div>
-          <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
+          <div class="white-box"><img src="static\img\svg\email.svg" alt=""/></div>
           <div class="text-box"><span id="strong">Важно <br/></span>
             <p>о том, что нужно юзать одинаковую почту</p>
           </div>
