--- a/confirmed.html
+++ b/confirmed.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="static\css\confirmed.css"/>
     <title>Document</title>
   </head>
-  <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
+  <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a><a class="logout" href="#">Log out</a>
     <div class="alert green">
       <div class="msg">
         <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
