--- a/transaction.html
+++ b/transaction.html
@@ -7,6 +7,34 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a><a class="logout" href="#">Log out</a>
+    <div class="milk">
+      <div class="milk-box">
+        <div class="message-bad"><img src="static\img\png\stop.png" alt=""/>
+          <p>Ваша транзакция не прошла </p>
+          <div class="dots">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div><a href="#" id="transr">
+          <div class="back_to_menu">Назад в меню</div></a>
+        <div class="message-good"><img src="static\img\png\ok.png" alt=""/>
+          <p>Ваша транзакция прошла успешно</p><span id="bitc">00.1btc</span>
+          <div class="dots">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div><a href="#" id="trans">
+          <div class="back_to_menu">Назад в меню</div></a>
+      </div>
+    </div>
     <div class="wrapper">
       <div class="alert yellow">
         <div class="msg">
