--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>Подтвердите верификацию на email</p>
       </div>
     </div>
+    <div class="milk"></div>
     <div class="wrapper">
       <div class="registration">
         <div class="web-ico"><img src="static\img\svg\www-2.svg" alt=""/></div>
