--- a/entry.html
+++ b/entry.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="static\css\password.css"/>
+    <link rel="stylesheet" href="static\css\entry.css"/>
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
     <div class="wrapper">
       <form action="#">
-        <div class="web-ico"><img src="static\img\svg\lock.svg" alt=""/></div>
-        <h1>Восстановление пароля</h1>
+        <div class="web-ico"><img src="static\img\svg\www.svg" alt=""/></div>
+        <h1>Вход</h1>
         <div class="form-element"><span>Email или номер телефона</span>
           <input type="text" placeholder="nicolas@gmail.com"/>
         </div>
         <div class="form-element">
-          <input type="submit" value="Востановить пароль"/>
+          <input type="password" placeholder="Пароль"/>
         </div>
+        <div class="form-element">
+          <input type="submit" value="Войти"/>
+        </div><a class="forget" href="#"><img src="static\img\png\lock-pass.png" alt=""/><span>Забыл пароль</span></a>
       </form>
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
