--- a/entry.html
+++ b/entry.html
@@ -14,7 +14,7 @@
         <div class="form-element"><span>Email или номер телефона</span>
           <input type="text" placeholder="nicolas@gmail.com"/>
         </div>
-        <div class="form-element">
+        <div class="form-element"><span>Пароль</span>
           <input type="password" placeholder="Пароль"/>
         </div>
         <div class="form-element">
@@ -23,4 +23,5 @@
       </form>
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
+  <script src="static\js\placeholder.js"></script>
 </html>
