--- a/transaction.html
+++ b/transaction.html
@@ -97,4 +97,5 @@
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
 <script src="static\\js\\transaction.js"> </script>
+  <script src="static\js\placeholder.js"></script>
 </html>
