--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
     <div class="alert yellow" id="alrt">
-      <div class="msg"><img src="static\img\svg\load.svg" alt=""/>
+      <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Подтвердите верификацию на email</p>
       </div>
     </div>
@@ -62,4 +62,5 @@
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
 <script src="static\\js\\nouislider.js"> </script>
 <script src="static\\js\\main.js"> </script>
+  <script src="static\js\placeholder.js"></script>
 </html>
