--- a/entry.html
+++ b/entry.html
@@ -7,7 +7,21 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
+    <div class="alert yellow" id="alrt">
+      <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
+        <p>Подтвердите верификацию на email</p>
+      </div>
+    </div>
+    <div class="milk"></div>
     <div class="wrapper">
+      <div class="right-err-msg" id="right-err">
+        <div class="cross"></div>
+        <h2>Ошибка при регистрации</h2>
+        <ol>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+        </ol>
+      </div>
       <form action="#">
         <div class="web-ico"><img src="static\img\svg\www.svg" alt=""/></div>
         <h1>Вход</h1>
