--- a/confirmed.html
+++ b/confirmed.html
@@ -17,6 +17,14 @@
       </div>
     </div>
     <div class="wrapper">
+      <div class="right-err-msg" id="right-err">
+        <div class="cross"></div>
+        <h2>Ошибка при регистрации</h2>
+        <ol>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+        </ol>
+      </div>
       <form action="#">
         <div class="form-element"><span>Вбить свой номер кошелька</span>
           <input type="text" placeholder="88005553535"/>
