--- a/create_password.html
+++ b/create_password.html
@@ -8,6 +8,14 @@
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
     <div class="wrapper">
+      <div class="right-err-msg" id="right-err">
+        <div class="cross"></div>
+        <h2>Ошибка при регистрации</h2>
+        <ol>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+        </ol>
+      </div>
       <form action="#">
         <div class="web-ico"><img src="static\img\svg\www.svg" alt=""/></div>
         <h1>Создать пароль</h1>
