--- a/transaction.html
+++ b/transaction.html
@@ -39,6 +39,14 @@
       </div>
     </div>
     <div class="wrapper">
+      <div class="right-err-msg" id="right-err">
+        <div class="cross"></div>
+        <h2>Ошибка при регистрации</h2>
+        <ol>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
+        </ol>
+      </div>
       <div class="alert yellow">
         <div class="msg">
           <div class="white-box"><span>!</span></div>
@@ -60,14 +68,16 @@
           <div class="names"><span>$ 2000, 000</span><span>$ 6000, 000</span><span>$ 12000, 000</span></div>
         </div>
         <h1>Совершите транзакцию</h1>
-        <form action="#">
-          <div class="form-money"><span>Количество токенов</span>
-            <input type="number" placeholder="100"/>
+        <form action="#" data-price="">
+          <div class="money">
+            <div class="form-money"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
+              <input type="text" placeholder="100 btc" id="btc"/>
+            </div>
+            <div class="form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
+              <input type="text" placeholder="2000$"/>
+            </div>
           </div>
-          <div class="form-money"><span>Сумма перевода</span>
-            <input type="number" placeholder="2000"/>
-          </div>
-          <div class="form-element"><span>Вбить свой номер кошелька</span>
+          <div class="form-element" id="first"><span>Вбить свой номер кошелька</span>
             <input type="text" placeholder="8800"/>
           </div>
           <div class="arrows">
