--- a/confirmed.html
+++ b/confirmed.html
@@ -16,6 +16,7 @@
         <p>Ваш аккаунт подтвержден</p>
       </div>
     </div>
+    <div class="milk"></div>
     <div class="wrapper">
       <div class="right-err-msg" id="right-err">
         <div class="cross"></div>
