--- a/create_password.html
+++ b/create_password.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
+    <div class="alert yellow" id="alrt">
+      <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
+        <p>Подтвердите верификацию на email</p>
+      </div>
+    </div>
+    <div class="milk"></div>
     <div class="wrapper">
       <div class="right-err-msg" id="right-err">
         <div class="cross"></div>
