--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <div class="form-element"><span>Email</span>
             <input type="email" placeholder="nikolas@gmail.com"/>
           </div>
-          <div class="form-element" id="arrow"><span id="red-msg">Выберите гражданство</span>
+          <div class="form-element arrow red-msg"><span>Выберите гражданство</span>
             <div class="arrow"></div>
-            <select id="red-msg">
+            <select>
               <option value="USA">USA</option>
               <option value="Ukraine">Ukraine</option>
               <option value="Ukraine">Ukraine</option>
@@ -47,11 +47,11 @@
               <option value="Ukraine">Ukraine</option>
             </select>
           </div>
-          <div class="form-element" id="red-msg"><span id="red-msg">Пароль</span>
-            <input type="password" placeholder="**************" id="red-msg"/>
+          <div class="form-element red-msg"><span>Пароль</span>
+            <input type="password" placeholder="**************"/>
           </div>
-          <div class="form-element" id="red-msg"><span id="red-msg">Повторите пароль</span>
-            <input type="password" placeholder="**************" id="red-msg"/>
+          <div class="form-element red-msg"><span>Повторите пароль</span>
+            <input type="password" placeholder="**************"/>
           </div>
           <div class="form-element" id="range"><span>Ожидаемая сумма инвестиций</span>
             <input type="numbers" value="2000" id="dollars"/>
