--- a/transaction.html
+++ b/transaction.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
+    <div class="alert yellow" id="alrt">
+      <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
+        <p>Подтвердите верификацию на email</p>
+      </div>
+    </div>
     <form>
       <button class="logout" type="submit">Log out</button>
     </form>
@@ -47,15 +52,6 @@
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsam.</li>
         </ol>
       </div>
-      <div class="alert yellow">
-        <div class="msg">
-          <div class="white-box"><span>!</span></div>
-          <div class="white-box"><img src="static\img\svg\email.svg" alt=""/></div>
-          <div class="text-box"><span id="strong">Важно <br/></span>
-            <p>о том, что нужно юзать одинаковую почту</p>
-          </div>
-        </div>
-      </div>
       <div class="content"><span>Текущий сбор:</span>
         <div class="number-box"><img src="static\img\png\rect.png" alt=""/><span id="number">$ 1,234,566</span></div>
         <div class="progress-bar-box">
@@ -70,10 +66,10 @@
         <h1>Совершите транзакцию</h1>
         <form action="#" data-price="">
           <div class="money">
-            <div class="form-money"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
+            <div class="form-money" id="payment-form"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
               <input type="text" placeholder="100 btc" id="btc"/>
             </div>
-            <div class="form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
+            <div class="form-money" id="payment-form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
               <input type="text" placeholder="2000$"/>
             </div>
           </div>
