--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
           </div>
           <div class="form-element" id="range"><span>Ожидаемая сумма инвестиций</span>
             <input type="numbers" value="2000" id="dollars"/>
+            <input type="hidden" value="" id="dlr"/>
             <div id="r-slider"> </div>
           </div>
           <div class="form-element" id="check">
             <input type="checkbox" name="checkbox" id="checkbox"/>
-            <label for="checkbox">Я принимаю условия и т.д.</label>
+            <label for="checkbox">Я принимаю <a href="#" id="terms"><br/>условия </a></label>
           </div>
           <div class="form-element">
             <input type="submit" value="Завершить регистрацию" id="subm"/>
