--- a/transaction.html
+++ b/transaction.html
@@ -66,11 +66,11 @@
         <h1>Совершите транзакцию</h1>
         <form action="#" data-price="">
           <div class="money">
-            <div class="form-money" id="payment-form"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
-              <input type="text" placeholder="100 btc" id="btc"/>
+            <div class="form-money"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
+              <input type="text" placeholder="100 btc" id="payment-form"/>
             </div>
-            <div class="form-money" id="payment-form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
-              <input type="text" placeholder="2000$"/>
+            <div class="form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
+              <input type="text" placeholder="2000$" id="payment-form-money"/>
             </div>
           </div>
           <div class="form-element" id="first"><span>Вбить свой номер кошелька</span>
