--- a/confirmed.html
+++ b/confirmed.html
@@ -11,8 +11,7 @@
       <button class="logout" type="submit">Log out</button>
     </form>
     <div class="alert green">
-      <div class="msg">
-        <div class="white-box"><img src="static\img\svg\email-5.svg" alt=""/></div>
+      <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Ваш аккаунт подтвержден</p>
       </div>
     </div>
