--- a/transaction.html
+++ b/transaction.html
@@ -64,10 +64,10 @@
           <div class="names"><span>$ 2000, 000</span><span>$ 6000, 000</span><span>$ 12000, 000</span></div>
         </div>
         <h1>Совершите транзакцию</h1>
-        <form action="#" data-price="">
+        <form action="#" data-price="" id="payment-form">
           <div class="money">
             <div class="form-money"><img src="static\img\png\bitc.png" alt=""/><span>Количество токенов</span>
-              <input type="text" placeholder="100 btc" id="payment-form"/>
+              <input type="text" placeholder="100 btc" id="payment-form-tokens"/>
             </div>
             <div class="form-money"><img src="static\img\png\dollar.png" alt=""/><span>Сумма перевода</span>
               <input type="text" placeholder="2000$" id="payment-form-money"/>
