--- a/password.html
+++ b/password.html
@@ -35,4 +35,5 @@
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
   <script src="static\js\placeholder.js"></script>
+  <script src="static\js\logotip.js"></script>
 </html>
