last version by Vovk

--- a/entry.html
+++ b/entry.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="static\css\entry.css"/>
+    <link rel="shortcut icon" type="image/png" href="static/img/png/favicon.ico"/>
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
+    <form>
+      <button class="Signup" type="submit">Sign up</button>
+    </form>
     <div class="alert yellow" id="alrt">
       <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Подтвердите верификацию на email</p>
