--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="static\css\main.css"/>
     <link rel="stylesheet" href="static\css\nouislider.css"/>
+    <link rel="shortcut icon" type="image/png" href="static/img/png/favicon.ico"/>
     <title>Document</title>
   </head>
   <body><a class="logo" href="transaction.html"><img src="static\img\svg\logo.svg" alt=""/></a>
+    <form>
+      <button class="Signin" type="submit">Sign in</button>
+    </form>
     <div class="alert yellow" id="alrt">
       <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Подтвердите верификацию на email</p>
