--- a/password.html
+++ b/password.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="static\css\password.css"/>
+    <link rel="shortcut icon" type="image/png" href="static/img/png/favicon.ico"/>
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
