--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
             <input type="hidden" value="" id="dlr"/>
             <div id="r-slider"> </div>
           </div>
-          <div class="form-element" id="check">
-            <input type="checkbox" name="checkbox" id="checkbox"/>
-            <label for="checkbox">Я принимаю <a href="#" id="terms"><br/>условия </a></label>
+          <div class="form-element checkbox-element">
+            <input type="checkbox" name="checkbox" id="checkbox-citizenship"/>
+            <label for="checkbox-citizenship">I am not US citizen</label>
+          </div>
+          <div class="form-element checkbox-element red-msg">
+            <input type="checkbox" name="checkbox" id="checkbox-terms"/>
+            <label for="checkbox-terms">Я принимаю <a href="#" class="terms-link">условия</a></label>
           </div>
           <div class="form-element">
             <input type="submit" value="Завершить регистрацию" id="subm"/>
