Fix login and register buttons

--- a/entry.html
+++ b/entry.html
@@ -8,9 +8,7 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="#"><img src="static\img\svg\logo.svg" alt=""/></a>
-    <form>
-      <button class="Signup" type="submit">Sign up</button>
-    </form>
+   <a href="#" class="Signup">Sign up</a>
     <div class="alert yellow" id="alrt">
       <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Подтвердите верификацию на email</p>
