--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <title>Document</title>
   </head>
   <body><a class="logo" href="transaction.html"><img src="static\img\svg\logo.svg" alt=""/></a>
-    <form>
-      <button class="Signin" type="submit">Sign in</button>
-    </form>
+    <a href="#" class="Signin">Sign in</a>
     <div class="alert yellow" id="alrt">
       <div class="msg"><img src="static\img\svg\email-3.svg" alt=""/>
         <p>Подтвердите верификацию на email</p>
