Fixed progress section recognition

--- a/transaction.html
+++ b/transaction.html
@@ -60,9 +60,13 @@
           <div class="progress-bar">
             <div class="border"></div>
             <div class="border-2"></div>
-            <div class="progress" data-size="15"><span id="progr" data-golds="$ 1,502,960">$ 1,502,968</span></div>
+            <div class="progress"
+              data-progress-value="400000" 
+              data-progress-sections="5000000,6000000,12000000"
+              style="border-radius: 50px 0 0 50px;">
+            </div>
           </div>
-          <div class="names"><span>$ 2000, 000</span><span>$ 6000, 000</span><span>$ 12000, 000</span></div>
+          <!-- <div class="names"><span>$ 2000, 000</span><span>$ 6000, 000</span><span>$ 12000, 000</span></div> -->
         </div>
         <h1>Совершите транзакцию</h1>
         <form action="#" data-price="" id="payment-form">
