Fixed value for progress

--- a/transaction.html
+++ b/transaction.html
@@ -64,7 +64,7 @@
               data-progress-value="5000000" 
               data-progress-sections="5000000,6000000,12000000"
               style="border-radius: 50px 0 0 50px;">
-              <span id="prg" data-value="4000"> 1000 </span>
+              <span id="prg" data-value="4000">$5,000,000</span>
             </div>
           </div>
           <!-- <div class="names"><span>$ 2000, 000</span><span>$ 6000, 000</span><span>$ 12000, 000</span></div> -->
